# api/gen/go/api/article_grpc.pb.go
@@ -25,6 +25,7 @@ type ArticleServiceClient interface {
 	Ping(ctx context.Context, in *Empty, opts ...grpc.CallOption) (*Empty, error)
 	AddOrUpdateAuthor(ctx context.Context, in *Author, opts ...grpc.CallOption) (*AuthorID, error)
 	DelAuthorByKey(ctx context.Context, in *Author, opts ...grpc.CallOption) (*Empty, error)
+	PutOrUpdateArticle(ctx context.Context, in *Article, opts ...grpc.CallOption) (*ArticleID, error)
 	DelAuthor(ctx context.Context, in *AuthorID, opts ...grpc.CallOption) (*Empty, error)
 	PutArticle(ctx context.Context, in *Article, opts ...grpc.CallOption) (*ArticleID, error)
 	GetArticle(ctx context.Context, in *ArticleID, opts ...grpc.CallOption) (*Article, error)
@@ -62,6 +63,15 @@ func (c *articleServiceClient) AddOrUpdateAuthor(ctx context.Context, in *Author
 func (c *articleServiceClient) DelAuthorByKey(ctx context.Context, in *Author, opts ...grpc.CallOption) (*Empty, error) {
 	out := new(Empty)
 	err := c.cc.Invoke(ctx, "/api.ArticleService/DelAuthorByKey", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *articleServiceClient) PutOrUpdateArticle(ctx context.Context, in *Article, opts ...grpc.CallOption) (*ArticleID, error) {
+	out := new(ArticleID)
+	err := c.cc.Invoke(ctx, "/api.ArticleService/PutOrUpdateArticle", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -129,6 +139,7 @@ type ArticleServiceServer interface {
 	Ping(context.Context, *Empty) (*Empty, error)
 	AddOrUpdateAuthor(context.Context, *Author) (*AuthorID, error)
 	DelAuthorByKey(context.Context, *Author) (*Empty, error)
+	PutOrUpdateArticle(context.Context, *Article) (*ArticleID, error)
 	DelAuthor(context.Context, *AuthorID) (*Empty, error)
 	PutArticle(context.Context, *Article) (*ArticleID, error)
 	GetArticle(context.Context, *ArticleID) (*Article, error)
@@ -150,6 +161,9 @@ func (UnimplementedArticleServiceServer) AddOrUpdateAuthor(context.Context, *Aut
 }
 func (UnimplementedArticleServiceServer) DelAuthorByKey(context.Context, *Author) (*Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method DelAuthorByKey not implemented")
+}
+func (UnimplementedArticleServiceServer) PutOrUpdateArticle(context.Context, *Article) (*ArticleID, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method PutOrUpdateArticle not implemented")
 }
 func (UnimplementedArticleServiceServer) DelAuthor(context.Context, *AuthorID) (*Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method DelAuthor not implemented")
@@ -232,6 +246,24 @@ func _ArticleService_DelAuthorByKey_Handler(srv interface{}, ctx context.Context
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ArticleServiceServer).DelAuthorByKey(ctx, req.(*Author))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ArticleService_PutOrUpdateArticle_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Article)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ArticleServiceServer).PutOrUpdateArticle(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.ArticleService/PutOrUpdateArticle",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ArticleServiceServer).PutOrUpdateArticle(ctx, req.(*Article))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -362,6 +394,10 @@ var ArticleService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "DelAuthorByKey",
 			Handler:    _ArticleService_DelAuthorByKey_Handler,
+		},
+		{
+			MethodName: "PutOrUpdateArticle",
+			Handler:    _ArticleService_PutOrUpdateArticle_Handler,
 		},
 		{
 			MethodName: "DelAuthor",
